# Incidents

task/: Makefile  README.md  docker-compose.yml
task/incidents/: Dockerfile  db.sh  pyproject.toml  start.sh
task/incidents/core/: api.py  models.py  serializers.py  urls.py
task/incidents/core/management/commands/: populate_db.py
task/incidents/core/migrations/: 0001_initial.py
task/incidents/incidents/: asgi.py  settings.py  urls.py  wsgi.py
task/nginx/: nginx.conf
